--- a/task3/Makefile
+++ b/task3/Makefile
@@ -1,23 +1,35 @@
-SRC_DIR := src
+SRC_DIR := src/main/bin
 REPORT_DIR := report
+TARGET_DIR := target
 
-SRC := $(SRC_DIR)/main
+EXE := $(TARGET_DIR)/main
+SRC := $(wildcard $(SRC_DIR)/*.ml)
 REPORT := $(REPORT_DIR)/report.pdf
 
-DN := dune exec
+CMLC := ocamlc
 PDFLTX := pdflatex
 
 OUTPUT := --output-directory
 
 .PHONY: all
 
-all: run-src run-report clean-aux
+all: run-src clean run-report clean-aux
 
-run-src: $(SRC)
-	@echo "Running main.."
-	cd $<
-	$(DN) main
-	cd ../../
+run-src: $(EXE)
+	@echo "Running exe.."
+	./$< 
+
+$(EXE): $(SRC) | $(TARGET_DIR)
+	@echo "Building binaries.."
+	$(CMLC) $^ -o $@
+
+$(TARGET_DIR):
+	@echo "Create a target dir.."
+	@mkdir -p $@
+
+clean:
+	@echo "Cleaning up.."
+	@$(RM) -rv $(TARGET_DIR) $(SRC_DIR)/main.cmi $(SRC_DIR)/main.cmo
 
 run-report: $(REPORT)
 	@echo "Running report.."
